--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,2 @@
-# Astro Runtime includes the following pre-installed providers packages: https://docs.astronomer.io/astro/runtime-image-architecture#provider-packages
+astronomer-cosmos==1.0.4
+apache-airflow-providers-postgres==5.6.0
